[package]
name = "nuq"
description = "A multi-format frontend to jq"
version = "0.1.0"
edition = "2021"
authors = ["Erik Schubert <nuckal777+nuq@gmail.com>"]
license = "Unlicense"
resolver = "2"
repository = "https://github.com/Nuckal777/nuq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
clap = { version = "4.1", features = ["derive"] }
jq-rs = "0.4"
ron = "0.8"
serde = "1.0"
serde_json = "1.0"
serde-transcode = "1.1"
serde_yaml = "0.9"
syntect = "5.0"
toml = "0.5"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/nuq", dest = "/usr/bin/nuq", mode = "0755" },
    { source = "LICENSE", dest = "/usr/share/doc/nuq/LICENSE", doc = true, mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/nuq/README.md", doc = true, mode = "0644" }
]
